[package]
name = "wae-testing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/oovm/wae/tree/main/backends/wae-testing"
homepage = "https://github.com/oovm/wae/tree/main/backends/wae-testing"
description = "WAE Testing - 测试工具集，断言、Mock、Fixture"
keywords = ["testing", "mock", "fixture", "assertion"]
categories = ["development-tools::testing"]
documentation = "https://docs.rs/wae-testing"

[dependencies]
wae-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
url = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
mockall = { workspace = true, optional = true }
criterion = { workspace = true, optional = true }
hdrhistogram = { workspace = true, optional = true }
pact_consumer = { workspace = true, optional = true }
pact_verifier = { workspace = true, optional = true }
arbitrary = { workspace = true, optional = true }
# stats = { version = "0.1.3", optional = true }

[features]
default = []
containers = []
mockall = ["dep:mockall"]
bench = ["dep:criterion"]
load-test = ["dep:hdrhistogram"]
pact = ["dep:pact_consumer", "dep:pact_verifier"]
fuzz = ["dep:arbitrary"]
full = ["containers", "mockall", "bench", "load-test", "pact", "fuzz"]

[dev-dependencies]
tokio-test = { workspace = true }
