[package]
name = "wae-types"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository = "https://github.com/oovm/wae/tree/main/backends/wae-types"
homepage = "https://github.com/oovm/wae/tree/main/backends/wae-types"
description = "WAE Types - 统一错误类型与结果类型"
keywords = ["types", "error", "result"]
categories = ["rust-patterns"]
documentation = "https://docs.rs/wae-types"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "types_bench"
harness = false
