[package]
name = "wae-websocket"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository = "https://github.com/oovm/wae/tree/main/backends/wae-websocket"
homepage = "https://github.com/oovm/wae/tree/main/backends/wae-websocket"
description = "WAE WebSocket - WebSocket 服务，支持 tokio-tungstenite"
keywords = ["websocket", "realtime", "async"]
categories = ["web-programming", "network-programming"]
documentation = "https://docs.rs/wae-websocket"

[dependencies]
wae-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
